# recursive-compression

./: FLAG.txt  MANIFEST.in  PKG-INFO  README.md  rec-comp  rec-decomp  recursive-decompressor  requirements.txt  setup.cfg  setup.py
assets/css/: style.scss
decompressor/: __init__.py
reccomp/: VERSION.txt  __info__.py  __init__.py  base.py  compressor.py  decompressor.py
