[metadata]
name = recursive-compression
version = file: reccomp/VERSION.txt
author = Alexandre D'Hondt
author-email = alexandre.dhondt@gmail.com
home-page = https://github.com/dhondta/recursive-compression
description = Python tool for recursively (de)compressing nested archives using multiple algorithms (bzip2, rar, lzma, ...)
long-description = file: README.md
long-description-content-type = text/markdown
keywords =
    tinyscript
    patool
    tool
    compression
    decompression
    steganography
    bzip2
    tar
    rar
    xz
    arj
    lzma
    gzip
    7z
    zip
license = AGPLv3
license-file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Security :: Cryptography

[options]
packages = reccomp
scripts =
    rec-comp
    rec-decomp
include-package-data = false
install-requires =
    patool
    tinyscript>=1.22.11
setup-requires = setuptools
python-requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,<4

[options.package_data]
* = *.txt
