[metadata]
name = recursive-compression
version = file: reccomp/VERSION.txt
author = Alexandre D'Hondt
author-email = alexandre.dhondt@gmail.com
home-page = https://github.com/dhondta/recursive-compression
description = Python tool for recursively (de)compressing nested archives using multiple algorithms (bzip2, rar, lzma, ...)
long-description = file: README.md
long-description-content-type = text/markdown
keywords =
    tinyscript
    patool
    tool
    compression
    decompression
    steganography
    bzip2
    tar
    rar
    xz
    arj
    lzma
    gzip
    7z
    zip
license = GPLv3
license-file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Security :: Cryptography

[options]
packages = reccomp
scripts =
    rec-comp
    rec-decomp
include-package-data = false
install-requires =
    patool
    tinyscript>=1.28.6
setup-requires = setuptools
python-requires = >=3.8,<4

[options.package_data]
* = *.txt
